--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+
+    <!-- HEADER -->
     <header class="header">
         <a class="brand" href="index.html" aria-label="Home">
             <img src="images/logo.png" alt="SmileSchool logo">
@@ -26,7 +28,6 @@
 
         <!-- HERO SECTION -->
         <section class="hero">
-
             <div class="hero-inner">
                 <h1 class="hero-title">Get schooled</h1>
 
@@ -40,12 +41,10 @@
 
                 <h2 class="learn">Learn from the pros</h2>
             </div>
-
         </section>
 
-        <!-- PROS SECTION -->
+        <!-- PROS SECTION OUTSIDE HERO -->
         <section class="pros">
-
             <div class="pro">
                 <img src="images/1.png" alt="">
                 <h3>Phillip Massey</h3>
@@ -69,8 +68,219 @@
                 <h3>Henry Hughes</h3>
                 <p>« 24h smile » winner <br> 2016 – 2019</p>
             </div>
-
         </section>
+                   
+          <section class="testimonial">
+    <div class="testimonial-inner">
+
+        <img src="images/5.png" alt="Person smiling" class="testimonial-img">
+
+        <div class="testimonial-text">
+            <p class="quote">
+                « Those tutorials are concise and go straight to the point.  
+                I can’t think of a better place to learn smiling. And it’s so fun!
+            </p>
+
+            <p class="name">Person Name</p>
+            <p class="title">weather presenter</p>
+        </div>
+
+    </div>
+          </section>
+           
+          <section class="popular-tutorials">
+    <h2>Most <span>popular</span> tutorials</h2>
+
+    <div class="tutorial-grid">
+
+        <!-- CARD 1 -->
+        <article class="tutorial-card">
+            <div class="thumb">
+                <img src="/images/9.png" alt="Diagonal Smile">
+                <div class="play-btn"><img src="/images/play.png" alt=""></div>
+            </div>
+
+            <h3>Diagonal Smile</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            <div class="author">
+                <img src="/images/1.png" alt="Phillip Massey">
+                <span>Phillip Massey</span>
+            </div>
+
+            <div class="rating"><img src="/images/rating.png" alt=""></div>
+            <div class="duration">8 min</div>
+        </article>
+
+        <!-- CARD 2 -->
+        <article class="tutorial-card">
+            <div class="thumb">
+                <img src="/images/7.png" alt="Sad Smile">
+                <div class="play-btn"><img src="/images/play.png" alt=""></div>
+            </div>
+
+            <h3>Sad Smile</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            <div class="author">
+                <img src="/images/1.png" alt="Phillip Massey">
+                <span>Phillip Massey</span>
+            </div>
+
+            <div class="rating"><img src="/images/rating.png" alt=""></div>
+            <div class="duration">8 min</div>
+        </article>
+
+        <!-- CARD 3 -->
+        <article class="tutorial-card">
+            <div class="thumb">
+                <img src="/images/8.png" alt="Natural Smile">
+                <div class="play-btn"><img src="/images/play.png" alt=""></div>
+            </div>
+
+            <h3>Natural Smile</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            <div class="author">
+                <img src="/images/1.png" alt="Phillip Massey">
+                <span>Phillip Massey</span>
+            </div>
+
+            <div class="rating"><img src="/images/rating.png" alt=""></div>
+            <div class="duration">8 min</div>
+        </article>
+
+        <!-- CARD 4 -->
+        <article class="tutorial-card">
+            <div class="thumb">
+                <img src="/images/6.png" alt="Happy Smile">
+                <div class="play-btn"><img src="/images/play.png" alt=""></div>
+            </div>
+
+            <h3>Happy Smile</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            <div class="author">
+                <img src="/images/2.png" alt="Phillip Massey">
+                <span>Phillip Massey</span>
+            </div>
+
+            <div class="rating"><img src="/images/rating.png" alt=""></div>
+            <div class="duration">8 min</div>
+        </article>
+
+    </div>
+</section>
+
+      <section class="membership">
+    <h2><span>Free</span> membership</h2>
+
+    <div class="membership-items">
+
+        <div class="member-box">
+            <img src="images/smile.png" alt="smile icon">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="member-box">
+            <img src="images/smile.png" alt="smile icon">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="member-box">
+            <img src="images/smile.png" alt="smile icon">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="member-box">
+            <img src="images/smile.png" alt="smile icon">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
+        </div>
+
+    </div>
+
+    <button class="register-btn">REGISTER FOR FREE</button>
+</section>
+ <section class="faq-section">
+    <h2>F.A.Q.</h2>
+
+    <div class="faq-container">
+
+        <div class="faq-item">
+            <h3>How does this work?</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>How does this work?</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>How does this work?</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>How does this work?</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </p>
+        </div>
+
+    </div>
+</section>
+       <footer>
+    <div class="footer-content">
+        <div class="footer-left">
+            <img src="./images/logo.png" alt="SmileSchool Logo" class="footer-logo">
+            <span class="footer-brand">SmileSchool</span>
+        </div>
+
+        <div class="footer-icons">
+            <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
+            <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
+            <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram"></a>
+        </div>
+    </div>
+
+    <p class="footer-small">©SmileSchool 2020</p>
+</footer>
+
 
     </main>
 
