Update all the changes

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
     <title>School Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -39,7 +40,7 @@
 
                 <button class="button">REGISTER FOR FREE</button>
 
-                <h2 class="learn">Learn from the pros</h2>
+                <h2 class="learn"><span>Learn</span> from the pros</h2>
             </div>
         </section>
 
@@ -76,10 +77,10 @@
         <img src="images/5.png" alt="Person smiling" class="testimonial-img">
 
         <div class="testimonial-text">
-            <p class="quote">
+            <blockquote>
                 « Those tutorials are concise and go straight to the point.  
                 I can’t think of a better place to learn smiling. And it’s so fun!
-            </p>
+            </blockquote>
 
             <p class="name">Person Name</p>
             <p class="title">weather presenter</p>
