Update all the changes

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -40,7 +40,7 @@
 
                 <button class="button">REGISTER FOR FREE</button>
 
-                <h2 class="learn"><span>Learn</span> from the pros</h2>
+                <h2 class="learn"><span class="purple">Learn</span> from the pros</h2>
             </div>
         </section>
 
@@ -265,21 +265,30 @@
 
     </div>
 </section>
-       <footer>
-    <div class="footer-content">
-        <div class="footer-left">
-            <img src="./images/logo.png" alt="SmileSchool Logo" class="footer-logo">
-            <span class="footer-brand">SmileSchool</span>
-        </div>
 
-        <div class="footer-icons">
-            <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
-            <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
-            <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram"></a>
-        </div>
-    </div>
+      <footer>
+    <section class="footer-section">
+        <div class="footer-content">
 
-    <p class="footer-small">©SmileSchool 2020</p>
+            <!-- LEFT: Logo -->
+            <div class="footer-left">
+                <img src="./images/logo.png" alt="SmileSchool Logo" class="footer-logo">
+            </div>
+
+            <!-- CENTER: Copyright -->
+            <div class="footer-center">
+                <p class="footer-small">© SmileSchool 2020</p>
+            </div>
+
+            <!-- RIGHT: Social Icons -->
+            <div class="footer-right">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+
+        </div>
+    </section>
 </footer>
 
 
