--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEADPHONES</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="0-styles.css">
+    <link rel="stylesheet" href="1-styles.css">
+    <link rel="stylesheet" href="fonts/style.css">
 
 </head>
 <body>
@@ -39,6 +40,53 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </p>
   </div>
+</section>
+<!-- WHAT WE DO SECTION --> 
+      <section class="what-we-do">
+    <!-- Section Title -->
+   
+    <h2>What We Do</h2>
+
+    <!-- Main container for all service items -->
+    <div class="features">
+
+        <!-- 1st Feature -->
+        <div class="feature-item">
+            <span class="holberton-icon">
+                <i class="holberton-icon-ic_sound"></i>
+            </span>
+            <h3>Audio</h3>
+            <p>We deliver high-definition sound experiences tailored for creators and listeners.</p>
+        </div>
+
+        <!-- 2nd Feature -->
+        <div class="feature-item">
+            <span class="holberton-icon">
+                <i class="holberton-icon-ic_video"></i>
+            </span>
+            <h3>Video</h3>
+            <p>Video solutions with smooth playback and crystal-clear visuals for all devices.</p>
+        </div>
+
+        <!-- 3rd Feature -->
+        <div class="feature-item">
+            <span class="holberton-icon">
+                <i class="holberton-icon-ic_music"></i>
+            </span>
+            <h3>Music</h3>
+            <p>Explore curated music libraries and streaming services for every taste.</p>
+        </div>
+
+        <!-- 4th Feature -->
+        <div class="feature-item">
+            <span class="holberton-icon">
+                <i class="holberton-icon-ic_hearing"></i>
+            </span>
+            <h3>Hearing</h3>
+            <p>Advanced audio technologies designed to improve your listening experience.</p>
+        </div>
+
+    </div>
 </section>
 
 </body>
