--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEADPHONES</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="1-styles.css">
+    <link rel="stylesheet" href="2-styles.css">
     <link rel="stylesheet" href="fonts/style.css">
 
 </head>
@@ -82,10 +82,46 @@
     <h3>Hearing</h3>
     <p>Advanced audio technologies designed to improve your listening experience.</p>
 </div>
-       
-
-    
 </section>
 
+<!-- OUR RESULTS SECTION -->
+<section class="our-results">
+    <h2>Our results</h2>
+    <p class="results-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Integer accumsan egestas eleifend. Sed pretium odio nec 
+        nulla fermentum commodo.
+    </p>
+
+    <div class="results-grid">
+        <div class="result-item">
+            <div class="pentagon">
+                <span class="value">+2%</span>
+            </div>
+            <p class="label">Lorem ipsum</p>
+        </div>
+
+        <div class="result-item">
+            <div class="pentagon">
+                <span class="value">+5%</span>
+            </div>
+            <p class="label">Lorem ipsum</p>
+        </div>
+
+        <div class="result-item">
+            <div class="pentagon">
+                <span class="value">+12%</span>
+            </div>
+            <p class="label">Lorem ipsum</p>
+        </div>
+
+        <div class="result-item">
+            <div class="pentagon">
+                <span class="value">+8%</span>
+            </div>
+            <p class="label">Lorem ipsum</p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
