--- a/headphones/3-index.html
+++ b/headphones/3-index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEADPHONES</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="2-styles.css">
+    <link rel="stylesheet" href="3-styles.css">
     <link rel="stylesheet" href="fonts/style.css">
 
 </head>
@@ -121,6 +121,32 @@
             </div>
             <p class="label">Lorem ipsum</p>
         </div>
+    </div>
+</section>
+
+<!-- CONTACT US SECTION -->
+<section class="contact" id="contact">
+    <div class="container">
+        <h2>Contact us</h2>
+
+        <form class="contact-form">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input id="name" type="text" required>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input id="email" type="email" required>
+            </div>
+
+            <div class="form-group">
+                <label for="message">Your message</label>
+                <textarea id="message" rows="3" required></textarea>
+            </div>
+
+            <button type="submit" class="btn-submit">CALL TO ACTION</button>
+        </form>
     </div>
 </section>
 </body>
