Add the footer section logo and socials

--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEADPHONES</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="3-styles.css">
+    <link rel="stylesheet" href="4-styles.css">
     <link rel="stylesheet" href="fonts/style.css">
 
 </head>
@@ -149,6 +149,35 @@
         </form>
     </div>
 </section>
+<!--FOOTER SECTION -->
+<footer class="footer">
+  <div class="container footer-inner">
+    <!-- left: logo -->
+    <div class="footer-left">
+      <a href="#" class="footer-logo-link" aria-label="Headphones home">
+        <img src="images/logo_headphones.png" alt="Headphones logo" class="footer-logo">
+      </a>
+    </div>
 
+    <!-- right: social icons (using Holberton icon font) -->
+    <div class="footer-right" role="navigation" aria-label="Social links">
+      <a href="#" class="social" aria-label="Facebook">
+        <span class="holberton-icon holberton_school-icon-ic_facebook" aria-hidden="true"></span>
+      </a>
+
+      <a href="#" class="social" aria-label="Twitter">
+        <span class="holberton-icon holberton_school-icon-ic_twitter" aria-hidden="true"></span>
+      </a>
+
+      <a href="#" class="social" aria-label="Instagram">
+        <span class="holberton-icon holberton_school-icon-ic_instagram" aria-hidden="true"></span>
+      </a>
+    </div>
+  </div>
+
+  <div class="footer-copyright">
+    <small>&copy; headphones 2020</small>
+  </div>
+</footer>
 </body>
 </html>
