make all the changes in all the files changed

--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -149,6 +149,7 @@
         </form>
     </div>
 </section>
+
 <!--FOOTER SECTION -->
 <footer class="footer">
   <div class="container footer-inner">
@@ -159,7 +160,7 @@
       </a>
     </div>
 
-    <!-- right: social icons (using Holberton icon font) -->
+    <!-- social icons using Holberton icon font -->
     <div class="footer-right" role="navigation" aria-label="Social links">
       <a href="#" class="social" aria-label="Facebook">
         <span class="holberton-icon holberton_school-icon-ic_facebook" aria-hidden="true"></span>
