--- a/headphones/6-index.html
+++ b/headphones/6-index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEADPHONES</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="4-styles.css">
+    <link rel="stylesheet" href="6-styles.css">
     <link rel="stylesheet" href="fonts/style.css">
 
 </head>
@@ -82,48 +82,53 @@
     <h3>Hearing</h3>
     <p>Advanced audio technologies designed to improve your listening experience.</p>
 </div>
+       
 </section>
 
+
 <!-- OUR RESULTS SECTION -->
-<section class="our-results">
-    <h2>Our results</h2>
-    <p class="results-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Integer accumsan egestas eleifend. Sed pretium odio nec 
-        nulla fermentum commodo.
-    </p>
+<section class="results">
+    <div class="results-overlay">
+        <h2>Our results speak for themselves</h2>
+        <p class="results-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
 
-    <div class="results-grid">
-        <div class="result-item">
-            <div class="pentagon">
-                <span class="value">+2%</span>
-            </div>
-            <p class="label">Lorem ipsum</p>
-        </div>
+        <div class="results-grid">
 
-        <div class="result-item">
             <div class="pentagon">
-                <span class="value">+5%</span>
+                <div class="pentagon-inner">
+                    <h3>+2%</h3>
+                    <p>Lorem ipsum dolor</p>
+                </div>
             </div>
-            <p class="label">Lorem ipsum</p>
-        </div>
 
-        <div class="result-item">
             <div class="pentagon">
-                <span class="value">+12%</span>
+                <div class="pentagon-inner">
+                    <h3>+2%</h3>
+                    <p>Lorem ipsum dolor</p>
+                </div>
             </div>
-            <p class="label">Lorem ipsum</p>
-        </div>
 
-        <div class="result-item">
             <div class="pentagon">
-                <span class="value">+8%</span>
+                <div class="pentagon-inner">
+                    <h3>+2%</h3>
+                    <p>Lorem ipsum dolor</p>
+                </div>
             </div>
-            <p class="label">Lorem ipsum</p>
+
+            <div class="pentagon">
+                <div class="pentagon-inner">
+                    <h3>+2%</h3>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
-
 <!-- CONTACT US SECTION -->
 <section class="contact" id="contact">
     <div class="container">
@@ -149,6 +154,7 @@
         </form>
     </div>
 </section>
+
 <!--FOOTER SECTION -->
 <footer class="footer">
   <div class="container footer-inner">
