Add all the changes made

--- a/headphones/7-index.html
+++ b/headphones/7-index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEADPHONES</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="4-styles.css">
+    <link rel="stylesheet" href="7-styles.css">
     <link rel="stylesheet" href="fonts/style.css">
 
 </head>
@@ -85,45 +85,43 @@
 </section>
 
 <!-- OUR RESULTS SECTION -->
-<section class="our-results">
-    <h2>Our results</h2>
-    <p class="results-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Integer accumsan egestas eleifend. Sed pretium odio nec 
-        nulla fermentum commodo.
-    </p>
+<section class="our-results" id="our-results">
+  <h2>Our results</h2>
 
-    <div class="results-grid">
-        <div class="result-item">
-            <div class="pentagon">
-                <span class="value">+2%</span>
-            </div>
-            <p class="label">Lorem ipsum</p>
-        </div>
+  <p class="results-text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer accumsan egestas eleifend.
+  </p>
 
-        <div class="result-item">
-            <div class="pentagon">
-                <span class="value">+5%</span>
-            </div>
-            <p class="label">Lorem ipsum</p>
-        </div>
-
-        <div class="result-item">
-            <div class="pentagon">
-                <span class="value">+12%</span>
-            </div>
-            <p class="label">Lorem ipsum</p>
-        </div>
-
-        <div class="result-item">
-            <div class="pentagon">
-                <span class="value">+8%</span>
-            </div>
-            <p class="label">Lorem ipsum</p>
-        </div>
+  <div class="results-grid">
+    <div class="result-item">
+      <div class="pentagon">
+        <span class="value">+2%</span>
+        <span class="desc">Growth</span>
+      </div>
     </div>
-</section>
 
+    <div class="result-item">
+      <div class="pentagon">
+        <span class="value">+2%</span>
+        <span class="desc">Engagement</span>
+      </div>
+    </div>
+
+    <div class="result-item">
+      <div class="pentagon">
+        <span class="value">+2%</span>
+        <span class="desc">Retention</span>
+      </div>
+    </div>
+
+    <div class="result-item">
+      <div class="pentagon">
+        <span class="value">+2%</span>
+        <span class="desc">Satisfaction</span>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- CONTACT US SECTION -->
 <section class="contact" id="contact">
     <div class="container">
@@ -163,15 +161,15 @@
     <!-- social icons using Holberton icon font -->
     <div class="footer-right" role="navigation" aria-label="Social links">
       <a href="#" class="social" aria-label="Facebook">
-        <span class="holberton-icon holberton_school-icon-ic_facebook" aria-hidden="true"></span>
+        <span class="holberton-icon holberton_school-icon-ic_facebook_e908" aria-hidden="true"></span>
       </a>
 
       <a href="#" class="social" aria-label="Twitter">
-        <span class="holberton-icon holberton_school-icon-ic_twitter" aria-hidden="true"></span>
+        <span class="holberton-icon holberton_school-icon-ic_twitter_e90f" aria-hidden="true"></span>
       </a>
 
       <a href="#" class="social" aria-label="Instagram">
-        <span class="holberton-icon holberton_school-icon-ic_instagram" aria-hidden="true"></span>
+        <span class="holberton-icon holberton_school-icon-ic_instagram_e90a" aria-hidden="true"></span>
       </a>
     </div>
   </div>
