Add the Humberger menu

--- a/headphones/8-index.html
+++ b/headphones/8-index.html
@@ -19,13 +19,22 @@
                 <span class="logo-text">HEADPHONES</span>
             </a>
 
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="#">what we do</a></li>
-                    <li><a href="#">our results</a></li>
-                    <li><a href="#">contact us</a></li>
-                </ul>
-            </nav>
+           <nav class="navbar">
+    
+
+    <ul class="nav-links">
+        <li><a href="#whatwedo">What we do</a></li>
+        <li><a href="#results">Our results</a></li>
+        <li><a href="#contact">Contact us</a></li>
+    </ul>
+
+    <!-- Hamburger icon -->
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</nav>
         </div>
     </header>
 
@@ -178,5 +187,7 @@
     <small>&copy; headphones 2020</small>
   </div>
 </footer>
+
+<script src="8-script.js"></script>
 </body>
 </html>
